[workspace]
members = [
    "frps_demo",
    "frpc_demo",
    "common",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"