
[package]
name = "frps"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1.4.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
http-body-util = "0.1.2"
futures-util = { workspace = true }
httparse = "1.8.0"
bytes = { workspace = true }
